--- a/lexmark.html
+++ b/lexmark.html
@@ -67,7 +67,7 @@
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h1>ServiceNow Redesign at Lexmark</h1>
 <h2>
-	ServiceNow is a customizable SaaS web app for Lexmark employees. On the platform, employees can submit request forms for any necessary services or jobs.
+At Lexmark, I redesigned the ServiceNow web-app internal tool to alleviate the workflow of 5,000 employees
 
 <br><br>
 
@@ -128,6 +128,12 @@
         </div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em; padding-top: 20px;">
 					<p><span style= "font-weight:700;">Overview</span><br></p>
+<p>Lexmark develops imaging solutions such as printers and software products that manage fleets of printers securely and efficiently.
+</p>
+
+<p>Employees can submit requests forms on a SaaS called ServiceNow to address a variety of needs, such as needing access to software or maintenance.</p>
+
+
 
 					<p>There was an employee consensus that ServiceNow created more problems than it solved. Luckily, the UX team had an intern to share with the ServiceNow team.</p>
 
@@ -155,8 +161,7 @@
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 
 					<p>
-In the past 12 months, ServiceNow only received 12% of service requests, and the phone lines received over 20,000 requests.
-					</p>
+ServiceNow sounded great, but in reality, it only received 12% of 30,000 service requests. The other method of making requests is over a phone call.</p>
 
 	<p>Busy phone lines meant additional employees were required, and employees experienced longer wait times. ServiceNow ROI was abysmal.</p>
 
@@ -176,12 +181,10 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 		<div class="content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4 style="color:#ffffff;">THE challenge</h4>
-					<h3 style="line-height: 1.5em; color:#ffffff;">How might we improve the user experience of ServiceNow to help increase its engagement?
+					<h4 style="color:#ffffff;">THE goal</h4>
+					<h3 style="line-height: 1.5em; color:#ffffff;">How might we improve the user experience of ServiceNow to help employees accurately complete a task on their first attempt at least 80% of the time?
 <h3></div></div></div>
 	</section>
-
-
 
 
 
@@ -269,7 +272,7 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 
 	<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-					<img src="images/lexmarkinterface.png" class="img-responsive" style="max-width:600px; float:right; padding: 25px 0px;">
+					<img src="images/lexmarkinterface.png" class="img-responsive" style="max-width:650px; float:right; padding: 25px 0px;">
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br><br>
 					<h4 style="padding-bottom:5px;">Interface Pain Points</h4>
@@ -296,7 +299,7 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 
 		<div class="row">
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-				<img src="images/lexmarkform.png" class="img-responsive" style="max-width:600px; float:right; padding: 25px 0px;">
+				<img src="images/lexmarkform.png" class="img-responsive" style="max-width:650px; float:right; padding: 25px 0px;">
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
 
@@ -330,40 +333,7 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 
 
 </div>
-
-<!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
-<button class="button button2 center" onclick=" window.open('https://docs.google.com/spreadsheets/d/1SlCxbpEKPWVJ7s8gs7EJzdZls9d8B0EYzVQlfBaER04/edit?usp=sharing','_blank')">Data Collection</button>
-</div> -->
-
-
-
 	</section>
-
-
-	<!-- <section>
-		<div class="contentblock content-wrapper900">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>Baseline usability test</h4>
-
-					<h3>People were failing 47% of the time</h3>
-					<p>Employees were failing almost once out of every two attempts to find the right form. The usability tests helped me pinpoint the exact steps in the user flow where users were making errors.</p></div></div>
-					<div class="row">
-
-						<div class="col-lg-9 col-md-9 col-sm-9">
-							<img src="images/baselineusability.png" class="img-responsive" style="max-width:100%; box-shadow: 0 0 10px; color: #EBEBEB;">
-				</div>
-				<div class="col-lg-3 col-md-3 col-sm-3">
-					<p> <span style= "font-weight:600;">Test Details<br>
-					53% Success Rate</span><br>10 Tasks<br>10 Target users</p>
-			</div>
-
-				</div>
-	</div>
-	</section> -->
-
-
 
 
 
@@ -476,7 +446,7 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 <div class="contentblock">
 					<div class="row"><br>
 								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-									<img src="images/lexington_page.png" class="img-responsive" style="max-width:600px; float:right; box-shadow: 0 0 10px; color: #EBEBEB;">
+									<img src="images/lexington_page.png" class="img-responsive" style="max-width:650px; float:right; box-shadow: 0 0 10px; color: #EBEBEB;">
 
 								</div>
 								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br><br>
@@ -506,7 +476,7 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 
 				<br><br><br><br>	<div class="row">
 						<div class="col-lg-6 col-md-6 col-sm-12">
-							<img src="images/ergonomic_furniture2.png" class="img-responsive center" style="max-width:600px;  box-shadow: 0 0 10px; color: #EBEBEB; padding-top:35px;">
+							<img src="images/ergonomic_furniture2.png" class="img-responsive center" style="max-width:650px;  box-shadow: 0 0 10px; color: #EBEBEB; padding-top:35px;">
 				</div>
 					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em; padding-top:5em;">
 							<h4 style="padding-bottom:5px;   text-transform: none;">What changes did I include in the form redesign?</h4>
@@ -538,7 +508,7 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 <br><br><br>
 					<div class="row">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-							<img src="images/lexmark1.gif" class="img-responsive" style="max-width:600px;  box-shadow: 0 0 10px; color: #EBEBEB; padding-top:35px;">
+							<img src="images/lexmark1.gif" class="img-responsive" style="max-width:650px;  box-shadow: 0 0 10px; color: #EBEBEB; padding-top:35px;">
 						</div>
 						<div class="col-lg-6col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br>
 		<br>
@@ -627,7 +597,7 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 <p style="color:#fff;">I replaced the cards' black border with drop shadows to increase the feeling of clickability. The previous black border was harsh, and it interfered with users' focus. I also rounded the card corners for a friendlier feel.
 </p>
 
-<p style="color:#fff;">I wanted the interface to have a modern feel, so I opted for a cooler darker-toned grey header that was consistent with the ServiceNow homepage.</p>
+<p style="color:#fff;">I also opted for a header with a darker grey. Previously, the color contrast ratio with the text and background of the header was 1.44:1 which does not meet accessible design standards.</p>
 <p style="color:#fff;"> </p>
 </div>
 </div><br><br><br><br>
@@ -643,7 +613,7 @@ In the past 12 months, ServiceNow only received 12% of service requests, and the
 </div>
 
 <div class="col-lg-4 col-md-4 col-sm-4">
-<p style="color:#fff;">I converted two columns to one column format. The success rate should stay the same because only the visual design has improved. </p>
+<p style="color:#fff;">I converted two columns to form design's best practice one column format. I would love to test the new prototype to see if it would score higher on the Systems Usability Scale(SUS). I would love to test this with users. </p>
 
 <p style="color:#fff;">I also gave the submit button a different background color to make it stand out more.</p>
 <p style="color:#fff;"> </p>
