--- a/lexmark.html
+++ b/lexmark.html
@@ -443,7 +443,7 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 			</div>
 			<div>
 </section>
-
+<div class="contentblock">
 	<div class="row"><br>
 		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 			<img src="images/lexington_page.png" class="img-responsive" style="max-width:650px; float:right; box-shadow: 0 0 10px; color: #EBEBEB;">
@@ -461,7 +461,7 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 			<p>The previous dropdown interaction left no room to explain confusing form titles. Cards can include helpful description text.	</p>
 		</div>
 	</div>
-				<br><br><br><br>
+				<br><br>
 
 				<div class="row"><br>
 					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -475,71 +475,51 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 						</div>
 						<p>Categorizing the content helps with providing context for unclear terms but also improves scannability.</p>
 						<div class='parent'>
-							<p><div class='numberCircle2 inline-block-child'>2</div><span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">More Surface Area</span></p>
+							<p><div class='numberCircle2 inline-block-child'>4</div><span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Limiting User Action</span></p>
 						</div>
-						<p>The previous dropdown interaction left no room to explain confusing form titles. Cards can include helpful description text.	</p>
+						<p>Included proactive error prevention such as using radio buttons for either/or relationships when previously, the forms employed checkboxes.</p>
+						<div class='parent'>
+							<p><div class='numberCircle2 inline-block-child'>4</div><span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Help Reduce Typos</span></p>
+						</div>
+						<p>Replaced input field for building information with dropdown detailing 6 options.</p>
+
 					</div>
 				</div>
 
 
 
 
+				<br><br>
 
-
-
-	<div class="row">
-		<div class="col-lg-6 col-md-6 col-sm-12">
-			<img src="images/ergonomic_furniture2.png" class="img-responsive center" style="max-width:650px;  box-shadow: 0 0 10px; color: #EBEBEB; padding-top:35px;">
-		</div>
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em; padding-top:5em;">
-			<h4 style="padding-bottom:5px;   text-transform: none;">What changes did I include in the form redesign?</h4>
-			<div class='parent'>
-				<p><div class='numberCircle2 inline-block-child'>3</div><span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Added Category Titles</span></p>
-			</div>
-			<p>Categorizing the content helps with providing context for unclear terms but also improves scannability. </p>
-			<div class='parent'>
-				<p><div class='numberCircle2 inline-block-child'>4</div><span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Limiting User Action</span></p>
-			</div>
-			<p>Included proactive error prevention such as using radio buttons for either/or relationships when previously, the forms employed checkboxes.	</p>
-			<div class='parent'>
-				<p><div class='numberCircle2 inline-block-child'>5</div><span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Help Reduce Typos</span></p>
-			</div>
-			<p>Replaced input field for building information with dropdown detailing 6 options.</p>
-		</div>
-	</div>
-<br><br><br>
-	<div class="row">
-		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-			<img src="images/lexmark1.gif" class="img-responsive" style="max-width:650px;  box-shadow: 0 0 10px; color: #EBEBEB; padding-top:35px;">
-		</div>
-		<div class="col-lg-6col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br><br>
-		<div class='parent'>
-			<p><div class='numberCircle2 inline-block-child'>6</div>
-				<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Save Screen Real Estate</span></p>
-		<p>Previously, there were 8 input fields even when they weren't always necessary. For the redesign, there are two input fields that can be replicated as necessary</p>
-		</div>
-		</div>
-
-				<br><br><br>
-									<div class="row">
-										<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-											<img src="images/lexmark2.gif" class="img-responsive" style="max-width:600px;  box-shadow: 0 0 10px; color: #EBEBEB; padding-top:35px;">
-										</div>
-										<div class="col-lg-6col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br>
-						<br>
-
+				<div class="row"><br>
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+						<img src="images/lexmark1.gif" class="img-responsive" style="max-width:650px; float:right; box-shadow: 0 0 10px; color: #EBEBEB;">
+					</div>
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br><br>
 						<div class='parent'>
-							<p><div class='numberCircle2 inline-block-child'>7</div>
-								<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Conditional Logic</span>
+							<p><div class='numberCircle2 inline-block-child'>6</div><span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Save Screen Real Estate</span>
 							</p>
 						</div>
+						<p>Previously, there were 8 input fields even when they weren't always necessary. For the redesign, there are two input fields that can be replicated as necessary</p>
+					</div>
+				</div>
 
-					<p>Show additional options depending on what the users clicks. </p>
-								</div>
+				<br><br>
 
-		</div></div>
-	</section>
+				<div class="row"><br>
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+						<img src="images/lexmark1.gif" class="img-responsive" style="max-width:650px; float:right; box-shadow: 0 0 10px; color: #EBEBEB;">
+					</div>
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br><br>
+						<div class='parent'>
+							<p><div class='numberCircle2 inline-block-child'>7</div><span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Conditional Logic</span>
+							</p>
+						</div>
+						<p>Show additional options depending on what the users clicks.</p>
+					</div>
+				</div>
 
+		</div>
 
 
 
