--- a/lexmark.html
+++ b/lexmark.html
@@ -518,7 +518,7 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 						<p>Show additional options depending on what the users clicks.</p>
 					</div>
 				</div>
-
+</div>
 		</div>
 
 
