--- a/lexmark.html
+++ b/lexmark.html
@@ -558,7 +558,9 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 
 </div></div>
 </div></section>
+
 <section id="gifbg2">
+	<div class="content-wrapper1300">
 
 															 		 <div class="row">
 																		 <div class="col-lg-3 col-md-3 col-sm-12">
