--- a/lexmark.html
+++ b/lexmark.html
@@ -122,10 +122,13 @@ At Lexmark, I redesigned the ServiceNow web-app internal tool to alleviate the w
 			<div class="row">
 
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-
-						<img src="images/lexmarkhome.png" class="img-responsive" style="max-width:85%; float:right; padding-top:25px; padding-bottom: 15px;">
-						<img src="images/lexmarkhomedescription.png" class="img-responsive" style="max-width:470px; float: right; padding: 0px 5px; padding-bottom:25px;">
+<div style="max-width:650px;" class="center textcenter">
+	<figure>
+						<img src="images/lexmarkhome.png" class="img-responsive" style= "padding-top:25px; padding-bottom: 15px;">
+						<figcaption>ServiceNow at Lexmark</figcaption>
+					</figure>
         </div>
+			</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em; padding-top: 20px;">
 					<p><span style= "font-weight:700;">Overview</span><br></p>
 <p>Lexmark develops imaging solutions such as printers and software products that manage fleets of printers securely and efficiently.
@@ -142,7 +145,6 @@ At Lexmark, I redesigned the ServiceNow web-app internal tool to alleviate the w
 					 a higher average of employee satisfaction ratings.</p>
 				</div>
     </div>
-
 	</div>
   </section>
 
@@ -299,8 +301,17 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 
 		<div class="row">
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-				<img src="images/lexmarkform.png" class="img-responsive" style="max-width:650px; float:right; padding: 25px 0px;">
-			</div>
+
+
+				<div style="max-width:650px;" class="center textcenter">
+					<figure>
+										<img src="images/lexmarkform.png" class="img-responsive" style= "padding-top:25px; padding-bottom: 15px;">
+										<figcaption>A portion of a request form- ergonomics furniture form</figcaption>
+									</figure>
+								</div>
+							</div>
+
+						
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
 
 				<br><br>	<h4 style="padding-bottom:5px;">Form Pain Points</h4>
@@ -347,34 +358,44 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 
 
 						<!-- In the previous design, location selection happened at different points the hierarchy. Often times, employees sifted through multiple forms that did not even pertain to their location when trying to find the right forms. The new design prioritizes location first to cut out any unnecessary searching behaviors. -->
-					</p></div></div>
+					</p></div></div><br>
 					<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12">
+					<p style="font-weight:bold;" >Original IA 👎</p>
+				</div>
+
+				</div>
+
+					<div class="row">
+						<div class="col-lg-4 col-md-4 col-sm-12">
+						<p>Employees saw forms that weren't relevant to their location. It led to unnecessary clicks.</p>
+		</div>
+
 						<div class="col-lg-8 col-md-8 col-sm-12">
 							<img src="images/lexmarkinfoarchitecture.png" class="img-responsive center" style="max-width:100%;">
 				</div>
 
-				<div class="col-lg-4 col-md-4 col-sm-12">
-<br><br>
-				<p> <span style= "font-weight:bold;">Original Pain Points</span><br>Employees saw forms that weren't relevant to their location. It led to unnecessary clicks.</p>
-</div>
+
 
 				</div>
 				<br><br>
 
 
+				<div class="row">
+					<div class="col-lg-12 col-md-12 col-sm-12">
+				<p style="font-weight:bold;" >New IA 👍</p>
+				</div>
+
+				</div>
 
 				<div class="row">
+					<div class="col-lg-4 col-md-4 col-sm-12">
+					<p>Employees no longer need to click back and forth within the IA. Every new level helps them become closer to their goal.</p>
+				</div>
+
 					<div class="col-lg-8 col-md-8 col-sm-12">
-						<img src="images/lexmarkinfoarch.png" class="img-responsive center" style="max-width:100%">
-			</div>
-
-			<div class="col-lg-4 col-md-4 col-sm-12">
-<br>
-			<p> <span style= "font-weight:bold;">The Redesign</span><br>Employees no longer need to click back and forth within the IA. Every new level helps them become closer to their goal.</p>
-</div>
-
-			</div>
-
+						<img src="images/lexmarkinfoarch.png" class="img-responsive center" style="max-width:100%;">
+				</div>
 				</div>
 			</div>
 		</div>
@@ -508,7 +529,7 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 
 				<div class="row"><br>
 					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-						<img src="images/lexmark1.gif" class="img-responsive" style="max-width:650px; float:right; box-shadow: 0 0 10px; color: #EBEBEB;">
+						<img src="images/lexmark2.gif" class="img-responsive" style="max-width:650px; float:right; box-shadow: 0 0 10px; color: #EBEBEB;">
 					</div>
 					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br><br>
 						<div class='parent'>
@@ -554,7 +575,7 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				<h4 style="color:#fff;">After the Implementation</h4>
 				<h3 style="color:#fff;">I wasn't satisfied with the visual design </h3>
-				<p style="color:#fff;">I decided to rework the visuals of this project after my internship ended since I didn't have much independence in that area.</p><br>
+				<p style="color:#fff;">I decided to rework the visuals of this project after my internship ended since I didn't have much independence in that area.</p><br><br><br>
 
 </div></div>
 </div></section>
@@ -564,16 +585,19 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 
 															 		 <div class="row">
 																		 <div class="col-lg-3 col-md-3 col-sm-12">
-
+<p style="font-weight:bold; color:#ffffff; text-align:center;">Original</p>
 																		 <img src="images/lexington_page1.png" class="img-responsive" style="max-width:600px; float:right; box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
 
 </div>
 																		 <div class="col-lg-5 col-md-5 col-sm-12">
+																			 <p style="font-weight:bold; color:#ffffff; text-align:center;">The Redesign</p>
+
 																	<img src="images/home.png" class="img-responsive center" style="max-width:600px;  box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
 
 </div>
 
 <div class="col-lg-4 col-md-4 col-sm-4">
+		 <p style="font-weight:bold; color:#ffffff; text-align:center;">What's Changed?</p>
 <p style="color:#fff;">I replaced the cards' black border with drop shadows to increase the feeling of clickability. The previous black border was harsh, and it interfered with users' focus. I also rounded the card corners for a friendlier feel.
 </p>
 
@@ -583,16 +607,20 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 </div><br><br><br><br>
 														 <div class="row">
 															 <div class="col-lg-3 col-md-3 col-sm-12">
+																 <p style="font-weight:bold; color:#ffffff;" text-align:center;>Original</p>
 
 															 <img src="images/ergonomic_furniture1.png" class="img-responsive" style="max-width:600px; float:right; box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
 
 </div>
 															 <div class="col-lg-5 col-md-5 col-sm-12">
+																 <p style="font-weight:bold; color:#ffffff; text-align:center;">The Redesign</p>
+
 														<img src="images/rest.png" class="img-responsive center" style="max-width:600px;  box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
 
 </div>
 
 <div class="col-lg-4 col-md-4 col-sm-4">
+		 <p style="font-weight:bold; color:#ffffff; text-align:center;">What's Changed?</p>
 <p style="color:#fff;">I converted two columns to form design's best practice one column format. I would love to test the new prototype to see if it would score higher on the Systems Usability Scale(SUS). I would love to test this with users. </p>
 
 <p style="color:#fff;">I also gave the submit button a different background color to make it stand out more.</p>
