--- a/lexmark.html
+++ b/lexmark.html
@@ -311,7 +311,7 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 								</div>
 							</div>
 
-						
+
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
 
 				<br><br>	<h4 style="padding-bottom:5px;">Form Pain Points</h4>
@@ -441,7 +441,7 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Wireframes</h4>
 					<h3>User needs weren't the only consideration</h3>
-					<p>Initially, I explored different single-column formats for the form redesign. Unfortunately, the developer did not approve of the single-column designs because of the ServiceNow platform's technical limitations.</p></div></div>
+					<p>Initially, I explored single-column form formats. However, after speaking with the developer, we decided to move forward with the original two column design due to technical limitations of the ServiceNow platform.</p></div></div>
 					<br>
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12">
@@ -621,9 +621,9 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 
 <div class="col-lg-4 col-md-4 col-sm-4">
 		 <p style="font-weight:bold; color:#ffffff; text-align:center;">What's Changed?</p>
-<p style="color:#fff;">I converted two columns to form design's best practice one column format. I would love to test the new prototype to see if it would score higher on the Systems Usability Scale(SUS). I would love to test this with users. </p>
+<p style="color:#fff;">I converted the form from two columns to a one column format. I hypothesize that the employee satisfaction ratings would increase because a one column design will help users to not skip any input fields and prevent misinterpretation. Moving forward, I'd love to test this design with users!</p>
 
-<p style="color:#fff;">I also gave the submit button a different background color to make it stand out more.</p>
+<p style="color:#fff;">The submit button is also a brighter blue to make it more identifiable.</p>
 <p style="color:#fff;"> </p>
 </div>
 											 </div>
