--- a/lexmark.html
+++ b/lexmark.html
@@ -258,18 +258,6 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 
 	<p>The interviews helped with problem validation, but we needed concrete data. I conducted <a href="https://docs.google.com/spreadsheets/d/1SlCxbpEKPWVJ7s8gs7EJzdZls9d8B0EYzVQlfBaER04/edit?usp=sharing" class="lexmarklink" target="_blank">usability tests</a> with ten employees on the ten most common tasks to identify the exact problematic steps in the user flow. </p>
 
-
-<!-- <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-
-<button class="button button2" onclick=" window.open('https://kminjin.github.io/images/thrivestyleguide.pdf','_blank')">View Style Guide</button>
-</div> -->
-<!-- <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-
-<p> <span style= "font-weight:700;">1. Typography</span><br>Typeface needed to work with headers, body copy, and captions. I chose the classic and accessible Source Sans Pro for optimal legibility.</p>
-<img src="images/thrivetypeface.png" class="img-responsive">
-
-
- -->
 </div></div>	</div>
 
 	<div class="row">
@@ -283,7 +271,6 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Unnecessary back & forth clicks</span>
 						</p>
 					</div>
-
 	<p>The IA did not reflect the employee's mental models. Unnecessary searching behavior was rampant.</p>
 
 	<div class='parent'>
@@ -295,21 +282,17 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 <p>The form titles in the dropdown were unclear. Employees weren't sure of what to expect.												</p>
 
 
-
 				</div>
 		</div>
 
 		<div class="row">
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-
-
 				<div style="max-width:650px;" class="center textcenter">
 					<figure>
-										<img src="images/lexmarkform.png" class="img-responsive" style= "padding-top:25px; padding-bottom: 15px;">
-										<figcaption>A portion of a request form- ergonomics furniture form</figcaption>
+										<img src="images/lexmarkform.png" class="img-responsive" style= "padding-top:25px; padding-bottom: 10px;">
+										<figcaption>A Portion of the Ergonomics Furniture Form</figcaption>
 									</figure>
-								</div>
-							</div>
+					</div>	</div>
 
 
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
@@ -341,9 +324,6 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 			</div>
 	</div>
 
-
-
-</div>
 	</section>
 
 
