--- a/lexmark.html
+++ b/lexmark.html
@@ -259,72 +259,70 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 	<p>The interviews helped with problem validation, but we needed concrete data. I conducted <a href="https://docs.google.com/spreadsheets/d/1SlCxbpEKPWVJ7s8gs7EJzdZls9d8B0EYzVQlfBaER04/edit?usp=sharing" class="lexmarklink" target="_blank">usability tests</a> with ten employees on the ten most common tasks to identify the exact problematic steps in the user flow. </p>
 
 </div></div>	</div>
-
-	<div class="row">
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-					<img src="images/lexmarkinterface.png" class="img-responsive" style="max-width:650px; float:right; padding: 25px 0px;">
-				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br><br>
-					<h4 style="padding-bottom:5px;">Interface Pain Points</h4>
-					<div class='parent'>
-						<p><div class='numberCircle inline-block-child'>1</div>
-							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Unnecessary back & forth clicks</span>
-						</p>
-					</div>
-	<p>The IA did not reflect the employee's mental models. Unnecessary searching behavior was rampant.</p>
-
-	<div class='parent'>
-		<p><div class='numberCircle inline-block-child'>2</div>
-			<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Too much guesswork</span>
-		</p>
-	</div>
-
-<p>The form titles in the dropdown were unclear. Employees weren't sure of what to expect.												</p>
+</section>
 
 
-				</div>
-		</div>
 
+<section id="graybg2">
+	<div class="content-wrapper900">
 		<div class="row">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-				<div style="max-width:650px;" class="center textcenter">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				<h4>Baseline Usability Test</h4>
+				<h3>Employees were failing 47% of the time on ServiceNow</h3>
+				<p>The interviews helped with problem validation, but we needed concrete data. I conducted <a href="https://docs.google.com/spreadsheets/d/1SlCxbpEKPWVJ7s8gs7EJzdZls9d8B0EYzVQlfBaER04/edit?usp=sharing" class="lexmarklink" target="_blank">usability tests</a> with ten employees on the ten most common tasks to identify the exact problematic steps in the user flow. </p>
+			</div>
+		</div>
+		<div>
+</section>
+<div id="graybg3">
+<div class="row"><br>
+	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		<img src="images/lexmarkinterface.png" class="img-responsive" style="max-width:650px; float:right; box-shadow: 0 0 10px; color: #EBEBEB;">
+	</div>
+	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br><br>
+		<h4 style="padding-bottom:5px;   text-transform: none;">Interface Pain Points</h4>
+		<div class='parent'>
+			<p><div class='numberCircle inline-block-child'>1</div><span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Unnecessary back & forth clicks</span>
+			</p>
+		</div>
+		<p>The IA did not reflect the employee's mental models. Unnecessary searching behavior was rampant.</p>
+		<div class='parent'>
+			<p><div class='numberCircle inline-block-child'>2</div><span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Too much guesswork</span></p>
+		</div>
+		<p>The form titles in the dropdown were unclear. Employees weren't sure of what to expect.	</p>
+	</div>
+</div>
+			<br><br>
+
+			<div class="row"><br>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 					<figure>
 										<img src="images/lexmarkform.png" class="img-responsive" style= "padding-top:25px; padding-bottom: 10px;">
 										<figcaption>A Portion of the Ergonomics Furniture Form</figcaption>
 									</figure>
-					</div>	</div>
-
-
-			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
-
-				<br><br>	<h4 style="padding-bottom:5px;">Form Pain Points</h4>
-
-				<div class='parent'>
-					<p><div class='numberCircle inline-block-child'>3</div>
-						<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Poor Content Hierarchy</span>
-					</p>
 				</div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br><br>
+					<h4 style="padding-bottom:5px;   text-transform: none;">Form Pain Points</h4>
+					<div class='parent'>
+						<p><div class='numberCircle inline-block-child'>3</div><span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Poor Content Hierarchy</span>
+						</p>
+					</div>
+					<p>The contents of the form were not digestable at a glance and the long forms were overwhelming.	</p>
+					<div class='parent'>
+						<p><div class='numberCircle inline-block-child'>4</div><span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Lack of Help</span></p>
+					</div>
+					<p>Users were left to fend for themselves when they were unsure of what the options were.</p>
+					<div class='parent'>
+						<p><div class='numberCircle inline-block-child'>4</div><span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Error Prone</span></p>
+					</div>
+					<p>Options with either/or relationships involved checkboxes rather than radio buttons</p>
 
-			<p>The contents of the form were not digestable at a glance and the long forms were overwhelming.						</p>
-
-			<div class='parent'>
-				<p><div class='numberCircle inline-block-child'>4</div>
-					<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Lack of Help</span>
-				</p>
+				</div>
 			</div>
 
-		<p>Users were left to fend for themselves when they were unsure of what the options were.</p>
-
-		<div class='parent'>
-			<p><div class='numberCircle inline-block-child'>5</div>
-				<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Error Prone</span>
-			</p>
-		</div>
-	<p>Options with either/or relationships involved checkboxes rather than radio buttons</p>
-			</div>
+</div>
 	</div>
 
-	</section>
 
 
 
