--- a/lexmark.html
+++ b/lexmark.html
@@ -245,23 +245,6 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 		</div>
 	</section>
 
-	<section id="graybg">
-		<div class="content-wrapper900">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-			<h4>Baseline Usability Test</h4>
-			<h3>Employees were failing 47% of the time on ServiceNow</h3>
-</div></div>
-
-<div class="row">
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
-	<p>The interviews helped with problem validation, but we needed concrete data. I conducted <a href="https://docs.google.com/spreadsheets/d/1SlCxbpEKPWVJ7s8gs7EJzdZls9d8B0EYzVQlfBaER04/edit?usp=sharing" class="lexmarklink" target="_blank">usability tests</a> with ten employees on the ten most common tasks to identify the exact problematic steps in the user flow. </p>
-
-</div></div>	</div>
-</section>
-
-
 
 <section id="graybg2">
 	<div class="content-wrapper900">
@@ -277,7 +260,7 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 <div id="graybg3">
 <div class="row"><br>
 	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-		<img src="images/lexmarkinterface.png" class="img-responsive" style="max-width:650px; float:right; box-shadow: 0 0 10px; color: #EBEBEB;">
+		<img src="images/lexmarkinterface.png" class="img-responsive" style="max-width:650px; float:right; box-shadow: 0 0 10px; color: #f5f5f5;">
 	</div>
 	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br><br>
 		<h4 style="padding-bottom:5px;   text-transform: none;">Interface Pain Points</h4>
@@ -296,10 +279,12 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 
 			<div class="row"><br>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+					<div class="center textcenter">
 					<figure>
-										<img src="images/lexmarkform.png" class="img-responsive" style= "padding-top:25px; padding-bottom: 10px;">
+										<img src="images/lexmarkform.png" class="img-responsive" style= "padding-top:25px; padding-bottom: 10px; max-width:650px">
 										<figcaption>A Portion of the Ergonomics Furniture Form</figcaption>
 									</figure>
+								</div>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br><br>
 					<h4 style="padding-bottom:5px;   text-transform: none;">Form Pain Points</h4>
@@ -559,22 +544,22 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 </div></section>
 
 <section id="gifbg2">
-	<div class="content-wrapper1300">
+	<div class="content-wrapper1200">
 
 															 		 <div class="row">
 																		 <div class="col-lg-3 col-md-3 col-sm-12">
 <p style="font-weight:bold; color:#ffffff; text-align:center;">Original</p>
-																		 <img src="images/lexington_page1.png" class="img-responsive" style="max-width:600px; float:right; box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
+																		 <img src="images/lexington_page1.png" class="img-responsive" style=" float:right; box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
 
 </div>
-																		 <div class="col-lg-5 col-md-5 col-sm-12">
+																		 <div class="col-lg-6 col-md-6 col-sm-12">
 																			 <p style="font-weight:bold; color:#ffffff; text-align:center;">The Redesign</p>
 
-																	<img src="images/home.png" class="img-responsive center" style="max-width:600px;  box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
+																	<img src="images/home.png" class="img-responsive center" style=" box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
 
 </div>
 
-<div class="col-lg-4 col-md-4 col-sm-4">
+<div class="col-lg-3 col-md-3 col-sm-3">
 		 <p style="font-weight:bold; color:#ffffff; text-align:center;">What's Changed?</p>
 <p style="color:#fff;">I replaced the cards' black border with drop shadows to increase the feeling of clickability. The previous black border was harsh, and it interfered with users' focus. I also rounded the card corners for a friendlier feel.
 </p>
@@ -585,19 +570,19 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 </div><br><br><br><br>
 														 <div class="row">
 															 <div class="col-lg-3 col-md-3 col-sm-12">
-																 <p style="font-weight:bold; color:#ffffff;" text-align:center;>Original</p>
+																 <p style="font-weight:bold; color:#ffffff; text-align:center;">Original</p>
 
-															 <img src="images/ergonomic_furniture1.png" class="img-responsive" style="max-width:600px; float:right; box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
+															 <img src="images/ergonomic_furniture1.png" class="img-responsive" style="float:right; box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
 
 </div>
-															 <div class="col-lg-5 col-md-5 col-sm-12">
+															 <div class="col-lg-6 col-md-6 col-sm-12">
 																 <p style="font-weight:bold; color:#ffffff; text-align:center;">The Redesign</p>
 
-														<img src="images/rest.png" class="img-responsive center" style="max-width:600px;  box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
+														<img src="images/rest.png" class="img-responsive center" style="box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
 
 </div>
 
-<div class="col-lg-4 col-md-4 col-sm-4">
+<div class="col-lg-3 col-md-3 col-sm-3">
 		 <p style="font-weight:bold; color:#ffffff; text-align:center;">What's Changed?</p>
 <p style="color:#fff;">I converted the form from two columns to a one column format. I hypothesize that the employee satisfaction ratings would increase because a one column design will help users to not skip any input fields and prevent misinterpretation. Moving forward, I'd love to test this design with users!</p>
 
