--- a/lexmark.html
+++ b/lexmark.html
@@ -231,15 +231,17 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Interviews</h4>
 					<h3>There was ample opportunity to improve the platform</h3>
-					<p>I conducted three semi-structured interviews with target users to understand their motivations, how the ServiceNow experience fits in their world, and identify design opportunities.
+					<p>I decided to conduct three semi-structured interviews with the most frequent users of the platform: a manager, an AA, and a request handler. For ServiceNow to be successful, the platform had to be well-received and adopted by all three types of users, and so, their opinions were equally valued.
 </p>
 				</div>
 			</div>
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<img src="images/lexmarkpersonas.png" class="img-responsive center" style="max-width:100%; padding-bottom:15%;">
-
+							<img src="images/lexmarkpersonas.png" class="img-responsive center" style="max-width:100%; padding-bottom:3em;">
+<p style="padding-bottom:15%;">During our interviews, we learned trouble started as soon as they arrived on the platform.
+Not only did users have difficulty completing the forms in their entirety error-free, but they even struggled with identifying the correct request form. Moving forward, we decided to redesign the IA, the interface, and all 10 request forms to help users quickly and accurately submit request forms!</p>
 						</div>
+
 					</div>
 
 		</div>
@@ -512,8 +514,8 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Final Usability Test</h4>
-					<h3>ServiceNow was no longer a pain... 89% success rate!</h3>
-<p>After "finalizing" the design, I built a prototype on Axure and wanted to see if the redesign made any difference. Compared to the original design, there was a 36% improvement in the avg task success rate! </p>
+					<h3>ServiceNow was no longer a pain... 89% success rate! 🎉</h3>
+<p>We EXCEEDED our goal! We initially hoped to help people reach a 80% success rate on their first attempt... and the final usability test of the redesign demonstrated a 36% improvement, for a overall 89% success rate.</p>
 
 </div>
 </div>
@@ -524,9 +526,8 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 			<p></p>
 				</div>
 				<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12" style="padding-top:15px;"><br>
-<p><span style="font-weight:600;">Test Details</span><br>10 tasks<br>10 participants<br><a href="https://docs.google.com/spreadsheets/d/1djY4QfYwwFXe8gQY-8s3KHBPcFOgd7yzSOrXo1p72Nk/edit?usp=sharing" class="lexmarklink" target="_blank">Data</a> </p><br>
+<!-- <p><span style="font-weight:600;">Test Details</span><br>10 tasks<br>10 participants<br><a href="https://docs.google.com/spreadsheets/d/1djY4QfYwwFXe8gQY-8s3KHBPcFOgd7yzSOrXo1p72Nk/edit?usp=sharing" class="lexmarklink" target="_blank">Data</a> </p><br> -->
 
-<p><span style="font-weight:600;">Next Step</span><br>Documentation for developer hand-off</p>
 
 
 			</div>		</div>
@@ -559,7 +560,7 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 
 </div>
 
-<div class="col-lg-3 col-md-3 col-sm-3">
+<div class="col-lg-3 col-md-3 col-sm-12">
 		 <p style="font-weight:bold; color:#ffffff; text-align:center;">What's Changed?</p>
 <p style="color:#fff;">I replaced the cards' black border with drop shadows to increase the feeling of clickability. The previous black border was harsh, and it interfered with users' focus. I also rounded the card corners for a friendlier feel.
 </p>
@@ -582,7 +583,7 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 
 </div>
 
-<div class="col-lg-3 col-md-3 col-sm-3">
+<div class="col-lg-3 col-md-3 col-sm-12">
 		 <p style="font-weight:bold; color:#ffffff; text-align:center;">What's Changed?</p>
 <p style="color:#fff;">I converted the form from two columns to a one column format. I hypothesize that the employee satisfaction ratings would increase because a one column design will help users to not skip any input fields and prevent misinterpretation. Moving forward, I'd love to test this design with users!</p>
 
